fixing some views so that they are more readable and easier to understand their function

--- a/schedule/static/schedule/reviews.css
+++ b/schedule/static/schedule/reviews.css
@@ -19,7 +19,7 @@
     -webkit-text-fill-color: transparent;
 }
 
-.leave-review-btn {
+.create-review-btn {
     display: inline-block;
     padding: 10px 20px;
     border-radius: 25px;
@@ -33,7 +33,7 @@
     margin-bottom: 20px;
 }
 
-.leave-review-btn:hover {
+.create-review-btn:hover {
     transform: translateY(-2px);
     background: linear-gradient(45deg, #00f2fe, #4facfe);
     box-shadow: 0 6px 20px rgba(0, 242, 254, 0.5);
